add week3 homework start JavaScript

--- a/SheCodes_Basics/Week-3/week-3-project.html
+++ b/SheCodes_Basics/Week-3/week-3-project.html
@@ -33,5 +33,10 @@
         <button>Your cat familiar</button>
         <hr />
         <p>Pawed by Hannah</p>
+        <script>
+            let askButton = document.querySelector("button");
+
+            askButton.addEventListener("click", alert("Hello!"));
+        </script>
     </body>
 </html>
