--- a/SheCodes_Basics/Week-3/week-3-project.html
+++ b/SheCodes_Basics/Week-3/week-3-project.html
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
         <h1>Cats</h1>
+        <img src="https://images.unsplash.com/photo-1503431128871-cd250803fa41?auto=format&fit=crop&q=80&w=3270&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
             <h2>Magical creatures</h2>
             <p>
                 Cats embody an enchanting mystique, weaving an irresistible
