add week3 homework JS correction and last CSS

--- a/SheCodes_Basics/Week-3/week-3-project.html
+++ b/SheCodes_Basics/Week-3/week-3-project.html
@@ -3,13 +3,109 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./week-3-project.css" />
+        <!-- <link rel="stylesheet" href="./week-3-project.css" /> -->
+        <style>
+            * {
+                box-sizing: border-box;
+                margin: 0;
+                padding: 0;
+            }
+            body {
+                background-color: aliceblue;
+                background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/102/934/original/marguerite-meadow_andreas-kretschmer-zUytXs3fusw-unsplash.jpg?1699102980");
+                background-repeat: no-repeat;
+                background-size: cover;
+                font-family: Cambria, Cochin, Georgia, Times, "Times New Roman",
+                    serif;
+            }
+            span {
+                color: #5e522e;
+                box-shadow: 5px 5px 10px whitesmoke;
+                border-radius: 30px;
+                padding: 6px;
+            }
+            em {
+                color: #cd9418;
+                padding: 8px;
+                border-radius: 25px 8px 25px 8px;
+                background-color: rgba(245, 245, 245, 0.42);
+            }
+            .main-content {
+                background: linear-gradient(
+                    rgba(245, 245, 245, 0.712),
+                    rgba(120, 118, 70, 0.9),
+                    rgba(216, 190, 110, 1)
+                );
+                margin: 80px auto;
+                min-width: 60%;
+                max-width: 60%;
+                padding: 50px;
+                border-radius: 25px;
+            }
+            h1 {
+                color: whitesmoke;
+                font-size: 80px;
+            }
+            h2 {
+                color: whitesmoke;
+                font-size: 50px;
+                margin-bottom: 30px;
+            }
+            p {
+                color: rgba(245, 245, 245, 0.9);
+                line-height: 1.5;
+                font-size: 20px;
+            }
+            .cat-photo {
+                width: 80%;
+                display: block;
+                margin: 50px auto;
+                opacity: 0.8;
+                border-radius: 35px;
+            }
+            a {
+                display: block;
+                text-align: center;
+                font-size: 20px;
+                font-weight: 600;
+                color: #7f5b0d;
+                text-decoration: overline;
+                margin: 30px auto;
+            }
+            a:hover {
+                text-decoration: underline;
+                cursor: pointer;
+            }
+            button {
+                display: block;
+                text-align: center;
+                margin: 40px auto;
+                padding: 30px;
+                font-size: 30px;
+                font-weight: 900;
+                border-radius: 8px 8px 25px 25px;
+                background-color: #baa25bca;
+                color: #7f5b0d;
+                border: 0.5px solid whitesmoke;
+                box-shadow: 5px 5px 10px 5px #867d07;
+                cursor: pointer;
+                font-family: inherit;
+                transition: all 300ms ease;
+            }
+            button:hover {
+                box-shadow: 5px 5px 10px 5px whitesmoke;
+            }
+        </style>
         <title>Cats</title>
     </head>
     <body>
         <div class="main-content">
-        <h1>Cats</h1>
-        <img src="https://images.unsplash.com/photo-1503431128871-cd250803fa41?auto=format&fit=crop&q=80&w=3270&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            <h1>Cats</h1>
+            <img
+                class="cat-photo"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/102/935/original/black-cat-eyes_hannah-troupe-0FQneB1VjaM-unsplash.jpg?1699103010"
+                alt=""
+            />
             <h2>Magical creatures</h2>
             <p>
                 Cats embody an enchanting mystique, weaving an irresistible
@@ -29,10 +125,12 @@
                 forever <br />
                 under their charming spell.
             </p>
-            <a href="https://en.wikipedia.org/wiki/Cat">Find out more about cats</a>
+            <a href="https://en.wikipedia.org/wiki/Cat" target="_blank"
+                >Find out more about cats</a
+            >
             <button>Your cat familiar</button>
             <hr />
-            <p>Pawed by Hannah</p>
+            <p>Pawed by <strong> Hannah </strong></p>
         </div>
         <script>
             function catSurvey() {
@@ -47,22 +145,19 @@
                     zodiac === "sagittarius"
                 ) {
                     alert("The perfect cat for you is a Ginger cat!");
-                }
-                if (
+                } else if (
                     zodiac === "taurus" ||
                     zodiac === "virgo" ||
                     zodiac === "capricorn"
                 ) {
                     alert("The perfect cat for you is a Tabby cat!");
-                }
-                if (
+                } else if (
                     zodiac === "gemini" ||
                     zodiac === "libra" ||
                     zodiac === "aquarius"
                 ) {
                     alert("The perfect cat for you is a White cat!");
-                }
-                if (
+                } else if (
                     zodiac === "cancer" ||
                     zodiac === "scorpio" ||
                     zodiac === "pisces"
