add week1 lesson 3 challenge

--- a/SheCodes_Plus/Week-1/2_html-revision.html
+++ b/SheCodes_Plus/Week-1/2_html-revision.html
@@ -13,7 +13,7 @@
             <br />
             <strong>Only 25 spots available!</strong>
         </p>
-        <a href="shecodes.io">Apply now</a>
+        <a href="https://www.shecodes.io">Apply now</a>
         <div>🌟</div>
     </body>
 </html>
