--- a/SheCodes_Plus/Week-1/5_forms.html
+++ b/SheCodes_Plus/Week-1/5_forms.html
@@ -4,8 +4,35 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>HTML Forms</title>
+        <style>
+            body {
+                border: 1px solid black;
+                border-radius: 5px;
+                padding: 20px;
+                width: 400px;
+                margin: 20px auto;
+            }
+            div {
+                padding: 5px;
+            }
+        </style>
     </head>
     <body>
-        <form action=""></form>
+        <h1>Welcome Back</h1>
+        <form>
+            <div>
+                <label for="email">Enter your email address</label>
+                <br />
+                <input type="email" id="email" required/>
+            </div>
+            <div>
+                <label for="password">Enter your password</label>
+                <br />
+                <input type="password" id="password" required/>
+            </div>
+            <div>
+                <input type="submit" value="Login" />
+            </div>
+        </form>
     </body>
 </html>
