--- a/SheCodes_Plus/Week-1/5_forms.html
+++ b/SheCodes_Plus/Week-1/5_forms.html
@@ -12,6 +12,9 @@
                 width: 400px;
                 margin: 20px auto;
             }
+            label {
+                display: block;
+            }
             div {
                 padding: 5px;
             }
@@ -22,13 +25,11 @@
         <form>
             <div>
                 <label for="email">Enter your email address</label>
-                <br />
-                <input type="email" id="email" required/>
+                <input type="email" id="email" required autofocus />
             </div>
             <div>
                 <label for="password">Enter your password</label>
-                <br />
-                <input type="password" id="password" required/>
+                <input type="password" id="password" required />
             </div>
             <div>
                 <input type="submit" value="Login" />
