add 9_week1-homework_html-structure update after solution video

--- a/SheCodes_Plus/Week-1/9_week1-homework_html-structure.html
+++ b/SheCodes_Plus/Week-1/9_week1-homework_html-structure.html
@@ -57,11 +57,11 @@
         <footer>
             <p>
                 This project was coded by
-                <a href="">SheCodes</a>
+                <a href="#" target="_blank">Hannah</a>
                 and is
-                <a href="">open sourced in GitHub</a>
+                <a href="#" target="_blank">open sourced in GitHub</a>
                 and
-                <a href="">hosted on Netlify</a>
+                <a href="#" target="_blank">hosted on Netlify</a>
             </p>
         </footer>
     </body>
