add addon HTML Class Manipulation challenge update

--- a/SheCodes_Basics/Basics-AddOn/5_class-manipulation.html
+++ b/SheCodes_Basics/Basics-AddOn/5_class-manipulation.html
@@ -4,6 +4,24 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>HTML Class Manipulation</title>
+        <!-- 
+        <style>
+            .dark {
+                background: black;
+            }
+
+            button {
+                background: black;
+                color: white;
+            }
+            Solution Video:
+            CHANGES to this style when the .dark class gets added to the body:
+            .dark button {
+                background: white;
+                color: black;
+            }
+        </style>
+-->
         <style>
             button {
                 background-color: black;
