--- a/SheCodes_Basics/Basics-AddOn/basics-addon-project/basics-addon-project.html
+++ b/SheCodes_Basics/Basics-AddOn/basics-addon-project/basics-addon-project.html
@@ -3,49 +3,93 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Basics Addon Project</title>
+        <title>Honeybees</title>
         <style>
+            body{
+                background-color: lightgoldenrodyellow;
+            }
+            .darkThemeButton {
+                background-color: darkgoldenrod;
+                font-size: 12px;
+                color: wheat;
+                padding: 5px 8px;
+            }
+            .darkThemeButton:hover{
+                background-color: wheat;
+                color: darkgoldenrod;
+            }
+            h1, h2{
+                text-align: center;
+            }
             img {
-                width: 200px;
+                max-width: 100%;
+            }
+            .container {
+                background-color: white;
+                margin: auto;
+                max-width: 600px;
+                padding: 20px;
+                border-radius: 10px;
+            }
+            button{
+                display: block;
+                margin: 0 auto;
+                border: 1px solid gold;
+                background-color: white;
+                font-size: 24px;
+                border-radius: 6px;
+                padding: 10px 15px;
+                transition: all 150ms ease-in-out;
+            }
+            button:hover{
+                background-color: gold;
+                cursor: pointer;
+            }
+            footer{
+                text-align: center;
+                margin: 10px 0;
+                font-size: 20px;
             }
         </style>
     </head>
     <body>
-        <button>Bee night</button>
-        <h1>Honeybee</h1>
-        <h2>Beekeeping and Buzzy concerts</h2>
-        <img
-            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/415/original/yellow-flower-bee-4.jpg?1700413191"
-            alt="yellow-flower-bee"
-        />
-        <img
-            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/414/original/yellow-flower-bee-1.jpg?1700413173"
-            alt="yellow-flower-bee"
-        />
-        <img
-            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/413/original/yellow-flower-bee-3.jpg?1700413160"
-            alt="yellow-flower-bee"
-        />
-        <img
-            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/408/original/beehive.jpg?1700413094"
-            alt="beehive"
-        />
-        <img
-            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/407/original/bee-white-flower.jpg?1700413079"
-            alt="bee-white-flower"
-        />
-        <img
-            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/410/original/fly-bee.jpg?1700413120"
-            alt="fly-bee"
-        />
-        <p>
-            Honeybees are like nature's little miracle workers. They buzz
-            around, pollinating flowers and creating this sweet magic called
-            honey. It's like they turn everyday flowers into a feast for us and
-            keep the whole natural world buzzing with life. It's pretty amazing
-            how these tiny creatures make our world so much sweeter.
-        </p>
-        <button>Meet the bees</button>
+        <button class="darkThemeButton">Bee night</button>
+        <div class="container">
+            <h1>Honeybee</h1>
+            <h2>Beekeeping and Buzzy concerts</h2>
+            <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/415/original/yellow-flower-bee-4.jpg?1700413191"
+                alt="yellow-flower-bee"
+            />
+            <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/414/original/yellow-flower-bee-1.jpg?1700413173"
+                alt="yellow-flower-bee"
+            />
+            <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/413/original/yellow-flower-bee-3.jpg?1700413160"
+                alt="yellow-flower-bee"
+            />
+            <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/408/original/beehive.jpg?1700413094"
+                alt="beehive"
+            />
+            <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/407/original/bee-white-flower.jpg?1700413079"
+                alt="bee-white-flower"
+            />
+            <img
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/410/original/fly-bee.jpg?1700413120"
+                alt="fly-bee"
+            />
+            <p>
+                Honeybees are like nature's little miracle workers. They buzz
+                around, pollinating flowers and creating this sweet magic called
+                honey. It's like they turn everyday flowers into a feast for us
+                and keep the whole natural world buzzing with life. It's pretty
+                amazing how these tiny creatures make our world so much sweeter.
+            </p>
+            <button>Meet the bees</button>
+        </div>
         <footer>
             <p>Coded by busy🐝bee Hannah</p>
         </footer>
