add addon final project add css animations

--- a/SheCodes_Basics/Basics-AddOn/basics-addon-project/basics-addon-project.html
+++ b/SheCodes_Basics/Basics-AddOn/basics-addon-project/basics-addon-project.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Honeybees</title>
+        <!-- <link rel="stylesheet" href="./basics-addon-project.css" /> -->
         <style>
-            body{
+            body {
                 background-color: lightgoldenrodyellow;
             }
             .darkThemeButton {
@@ -14,24 +15,72 @@
                 color: wheat;
                 padding: 5px 8px;
             }
-            .darkThemeButton:hover{
+            .darkThemeButton:hover {
                 background-color: wheat;
                 color: darkgoldenrod;
             }
-            h1, h2{
+            h1,
+            h2 {
                 text-align: center;
             }
+            /* Image Styles */
             img {
                 max-width: 100%;
+                border-radius: 12px;
+                margin: 5px 0;
             }
+            .bee-intro-picture {
+                margin-top: 30px;
+                transition: all 150ms ease-in-out;
+            }
+            .bee-intro-picture:hover {
+                transform: scale(1.2);
+                filter: drop-shadow(16px 16px 40px gold) contrast(110%);
+            }
+            .bee-picture-2 {
+                transition: all 200ms ease-in;
+            }
+            .bee-picture-2:hover {
+                transform: rotate(3deg);
+                filter: brightness(1.1);
+            }
+            .bee-picture-3 {
+                transition: all 300ms ease-out;
+            }
+            .bee-picture-3:hover {
+                transform: translateX(40px);
+                filter: drop-shadow(-32px -6px 30px #0f2100);
+            }
+            .bee-picture-4 {
+                transition: all 400ms ease;
+            }
+            .bee-picture-4:hover {
+                transform: rotate(2turn);
+                filter: hue-rotate(90deg);
+            }
+            .bee-picture-5 {
+                transition: all 400ms ease;
+            }
+            .bee-picture-5:hover {
+                transform: scale(0.9);
+                filter: saturate(30%);
+            }
+            .bee-picture-6 {
+                transition: all 300ms ease-out;
+            }
+            .bee-picture-6:hover {
+                transform: rotate(3turn) scale(1.5);
+                filter: sepia(60%);
+            }
+            /* Container Styles */
             .container {
-                background-color: white;
-                margin: auto;
+                background-color: rgba(255, 217, 0, 0.2);
+                margin: 5px auto;
                 max-width: 600px;
                 padding: 20px;
                 border-radius: 10px;
             }
-            button{
+            button {
                 display: block;
                 margin: 0 auto;
                 border: 1px solid gold;
@@ -41,11 +90,11 @@
                 padding: 10px 15px;
                 transition: all 150ms ease-in-out;
             }
-            button:hover{
+            button:hover {
                 background-color: gold;
                 cursor: pointer;
             }
-            footer{
+            footer {
                 text-align: center;
                 margin: 10px 0;
                 font-size: 20px;
@@ -57,27 +106,35 @@
         <div class="container">
             <h1>Honeybee</h1>
             <h2>Beekeeping and Buzzy concerts</h2>
+            <a href="https://en.wikipedia.org/wiki/Honey_bee" target="_blank">
+                <img
+                    class="bee-intro-picture"
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/415/original/yellow-flower-bee-4.jpg?1700413191"
+                    alt="yellow-flower-bee"
+                />
+            </a>
             <img
-                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/415/original/yellow-flower-bee-4.jpg?1700413191"
-                alt="yellow-flower-bee"
-            />
-            <img
+                class="bee-picture-2"
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/414/original/yellow-flower-bee-1.jpg?1700413173"
                 alt="yellow-flower-bee"
             />
             <img
+                class="bee-picture-3"
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/413/original/yellow-flower-bee-3.jpg?1700413160"
                 alt="yellow-flower-bee"
             />
             <img
+                class="bee-picture-4"
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/408/original/beehive.jpg?1700413094"
                 alt="beehive"
             />
             <img
+                class="bee-picture-5"
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/407/original/bee-white-flower.jpg?1700413079"
                 alt="bee-white-flower"
             />
             <img
+                class="bee-picture-6"
                 src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/104/410/original/fly-bee.jpg?1700413120"
                 alt="fly-bee"
             />
